--- a/脚本加载/load.html
+++ b/脚本加载/load.html
@@ -7,6 +7,7 @@
     <script>
       console.log('head script');
     </script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./a.js" async></script>
 
     <script src="./b.js" defer></script>
